[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/Level/CircleMap.gd" type="Script" id=1]
[ext_resource path="res://src/MapCreator/CircleMapTestView.gd" type="Script" id=2]
[ext_resource path="res://src/MapCreator/CircleMapCreator.gd" type="Script" id=3]

[node name="CircleMap" type="Node2D"]
script = ExtResource( 1 )

[node name="CircleMapCreator" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="TestView" type="Node2D" parent="."]
position = Vector2( 103.693, 55.9817 )
script = ExtResource( 2 )
